# vancouver_restoran

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
report/: index.html
res/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
res/migrations/: 0001_initial.py  0002_review.py
res/templates/res/: about.html  base.html  category_detail.html  dish_detail.html  index.html  menu.html  reviews_list.html
reservations/: admin.py  forms.py  models.py  telegram_bot.py  tests.py  urls.py  views.py
reservations/management/commands/: cleanup_old_reservations.py  create_sample_tables.py
reservations/migrations/: 0001_initial.py  0002_initial.py
reservations/templates/reservations/: reservation.html  success.html
users/: forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_first_name.py
users/templates/users/: login.html  register.html
